# apertium-ron

./: .gitattributes  .gitignore  AUTHORS  Makefile.am  README  apertium-ron.pc.in  apertium-ron.post-ron.dix  apertium-ron.ron.dix  apertium-ron.ron.rlx  apertium-ron.ron.tsx  configure.ac  modes.xml  tagger.supervised.make  tagger.unsupervised.make
tagger-data/: README.md  ron.crp  ron.crp.txt  ron.dic  ron.tagged  ron.tagged.txt  ron.untagged
tagger-data/tagged/: limba_daneza1.tagged  stea1.tagged
test/: analysis-input.txt  analysis-morph-expected.txt  tests.json
texts/: limba_daneza1.handtagged.andreibarbu.txt  limba_daneza1.raw.txt  limba_daneza1.tagged.txt  stea1.handtagged.camelia_mm.txt  stea1.raw.txt  stea1.tagged.txt
